
class BaseDataCenter:
    def __init__(self):
        pass

    def initialize(self,database):
        self.database = database

    def SetData(self,frame):
        pass

    def GetData(self):
        pass