@startuml
title Database Class Figure

cloud Database{
    abstract BaseDataCenter{
        +void initialize(Database database)
        +void SetData(Image frame)
        +Image GetData()


        
    }

    class Foward2Back{
        ' +void SetSettingImage()
        +void SetBaseImage(FolderName name)
        +bool isLoadingImage()

    }

    class Back2Foward{
        +FolderName GetBaseImage()

    }

    BaseDataCenter <--u Foward2Back
    BaseDataCenter <--u Back2Foward

    class Database{
        Image AnimeFace
        Image RealFace
        FolderName SettingImage
    }

    Database ...> Foward2Back 
    Database ...> Back2Foward : DataBaseにアクセス




    

}


@enduml